# hatscan

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
hatscan/: __init__.py  detect.py  eval.py  inspect.py  labels.py  synthetic.py  yolo_pose.py
notebooks/: train_colab.ipynb
scripts/: build_dataset.py  run_demo.py  run_eval.py  run_yolo_eval.py  train_yolo.py
tests/: test_eval.py  test_hatscan.py  test_labels.py  test_pose.py
