[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hatscan"
version = "0.1.0"
description = "Power line and pole inspection from images (OpenCV MVP)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "opencv-python-headless>=4.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hatscan*"]
